# ios-app-rs

./: Cargo.toml  LICENSE  Makefile.toml  Readme.md
src/: main.rs  main_vc.rs
